Code clean up, Swagger docs